src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Click_to_Download__c</fullName>
        <description>CLMCMA-21673: This field stores the link to preview the file</description>
        <formula>HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; Id, Title )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Click to Download</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Content_Document_ID__c</fullName>
        <label>External Content Document ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Document_Id__c</fullName>
        <description>DMD Integration</description>
        <externalId>true</externalId>
        <label>External Document Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Attachment_Id__c</fullName>
        <description>CLMCMA-10421 : to store the attachment Id</description>
        <label>Legacy Attachment Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
</CustomObject>